--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
+    <div id="title">
+        <p>The game starts!</p>
+        <div id="score">
+            Player score: 0  |  Computer score: 0
+        </div>
+    </div>
+    <div class="options">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
